--- a/views/pages/recipe-list.tmpl
+++ b/views/pages/recipe-list.tmpl
@@ -19,8 +19,14 @@
     </div>
 
     <form class="d-flex col-sm-7 col-lg-5 col-xl-4 pt-3" role="search" action="/" method="get">
-        <input class="form-control me-2" type="search" name="search" value="{{.Search}}" placeholder="Search"
-               aria-label="Search">
+        <input
+                class="form-control me-2"
+                type="search"
+                name="search"
+                value="{{.Search}}"
+                placeholder="Search"
+                aria-label="Search"
+        >
         <button class="btn btn-outline-light" type="submit">Search</button>
     </form>
 
