Add Recipe image upload/delete

--- a/views/pages/recipe-details.tmpl
+++ b/views/pages/recipe-details.tmpl
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-sm-5 col-md-4">
                 <img
-                        src="{{.ImageURL}}"
+                        src="{{.ImageURLOrDefault}}"
                         width="300"
                         height="300"
                         class="img-fluid w-100 pb-2"
