--- a/views/pages/recipe-list.tmpl
+++ b/views/pages/recipe-list.tmpl
@@ -37,7 +37,7 @@
                     <li class="col">
                         <div class="card h-100">
                             <img
-                                    src="{{.ImageURL}}"
+                                    src="{{.ImageURLOrDefault}}"
                                     width="300"
                                     height="300"
                                     class="card-img-top img-fluid"
