--- a/views/layouts/base.tmpl
+++ b/views/layouts/base.tmpl
@@ -99,7 +99,7 @@ c5.1, 0, 9.3-4.3, 9.3-9.3S485.7, 114.45, 480.7, 114.45z"/>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="/meals">
                                     <svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             viewBox="0 0 448 512"
@@ -197,7 +197,7 @@ c5.1, 0, 9.3-4.3, 9.3-9.3S485.7, 114.45, 480.7, 114.45z"/>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             document.querySelectorAll(".toast").forEach((toastEl) => {
-                const toast = new bootstrap.Toast(toastEl)
+                const toast = new bootstrap.Toast(toastEl);
                 toast.show();
             });
         });
