--- a/views/pages/recipe-list.tmpl
+++ b/views/pages/recipe-list.tmpl
@@ -2,7 +2,7 @@
 
 {{define "main"}}
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="h2">My recipes</h1>
+        <h1 class="h2">My Recipes</h1>
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#recipeModal">
             <svg
                     xmlns="http://www.w3.org/2000/svg"
