--- a/views/pages/recipe-list.tmpl
+++ b/views/pages/recipe-list.tmpl
@@ -40,11 +40,11 @@
                                     src="{{.ImageURLOrDefault}}"
                                     width="300"
                                     height="300"
-                                    class="card-img-top img-fluid"
+                                    class="card-img-top object-fit-cover"
                                     alt="{{.Title}}"
                             >
                             <div class="card-body">
-                                <a class="h6 text-reset text-decoration-none stretched-link" href="/recipes/{{.Id}}">
+                                <a class="h6 text-reset text-decoration-none stretched-link" href="/recipes/{{.ID}}">
                                     {{.Title}}
                                 </a>
                             </div>
