--- a/views/layouts/base.tmpl
+++ b/views/layouts/base.tmpl
@@ -4,8 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description"
-              content="Plan weekly meals, generate grocery lists, and organize recipes easily with MealSync. Save time and simplify cooking.">
+        <meta
+                name="description"
+                content="Plan weekly meals, generate grocery lists, and organize recipes easily with MealSync. Save time and simplify cooking."
+        >
         <title>{{template "title" .}} - MealSync</title>
         <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -155,50 +157,47 @@ c5.1, 0, 9.3-4.3, 9.3-9.3S485.7, 114.45, 480.7, 114.45z"/>
     </div>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        {{with .Toast.Success}}
-            <div
-                    class="toast align-items-center text-bg-success border-0"
-                    role="alert"
-                    aria-live="assertive"
-                    aria-atomic="true"
-            >
-                <div class="d-flex">
-                    <div class="toast-body">{{.}}</div>
-                    <button
-                            type="button"
-                            class="btn-close btn-close-white me-2 m-auto"
-                            data-bs-dismiss="toast"
-                            aria-label="Close"
-                    ></button>
-                </div>
-            </div>
-        {{end}}
-        {{with .Toast.Error}}
-            <div
-                    class="toast align-items-center text-bg-danger border-0"
-                    role="alert"
-                    aria-live="assertive"
-                    aria-atomic="true"
-            >
-                <div class="d-flex">
-                    <div class="toast-body">{{.}}</div>
-                    <button
-                            type="button"
-                            class="btn-close btn-close-white me-2 m-auto"
-                            data-bs-dismiss="toast"
-                            aria-label="Close"
-                    ></button>
-                </div>
-            </div>
-        {{end}}
+        {{template "toast" .}}
     </div>
 
     <script src="/static/js/bootstrap.bundle.min.js"></script>
     <script>
-        document.querySelectorAll(".toast").forEach((toastEl) => {
-            const toast = new bootstrap.Toast(toastEl);
-            toast.show();
-        });
+        const toastContainer = document.querySelector(".toast-container"); 
+
+        const showAllToast = () => {
+            toastContainer.querySelectorAll(".toast").forEach((toastEl) => {
+                const toast = new bootstrap.Toast(toastEl);
+                toast.show();
+            });
+        };
+
+        const fetchHTML = async (el, url, options) => {
+            const res = await fetch(url, options);
+            if (!res.ok) {
+                console.error(`Request error: ${res.status}`);
+                return;
+            }
+
+            const tmp = document.createElement("div");
+            tmp.innerHTML = await res.text();
+
+            const main = tmp.querySelector("#main");
+            const toast = tmp.querySelector("#toast");
+
+            // Load and show toasts
+            toastContainer.innerHTML = toast.innerHTML;
+            showAllToast();
+
+            // Load content and scripts
+            el.innerHTML = main.innerHTML;
+            el.querySelectorAll("script").forEach(oldScript => {
+                const newScript = document.createElement("script");
+                newScript.textContent = oldScript.textContent;
+                oldScript.parentNode.replaceChild(newScript, oldScript);
+            });
+        };
+
+        showAllToast();
     </script>
     {{block "scripts" .}}{{end}}
     </body>
