--- a/views/pages/recipe-edit.tmpl
+++ b/views/pages/recipe-edit.tmpl
@@ -127,108 +127,17 @@
         </button>
     </div>
 
-    <div
-            class="modal fade"
-            id="confirmDeleteModal"
-            tabindex="-1"
-            aria-labelledby="confirmDeleteModalLabel"
-            aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="confirmDeleteModalLabel">Confirm Deletion</h2>
-                </div>
-                <div class="modal-body">
-                    <p>
-                        Are you sure you want to delete this recipe? This action cannot be undone, and the recipe will
-                        be permanently removed.
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <form id="deleteForm" action="/recipes/{{.Recipe.ID}}" method="post">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn btn-danger">Delete Recipe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{template "deleteRecipeModal" .}}
 
-    <div
-            class="modal{{if not .ShowImageModal}} fade{{end}}"
-            id="editImageModal"
-            tabindex="-1"
-            aria-labelledby="editImageModalLabel"
-            aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="editImageModalLabel">
-                        Edit image
-                    </h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="{{.Recipe.ImageURLOrDefault}}" alt="{{.Recipe.Title}}" class="img-fluid w-100 mb-3">
-                    <form
-                            id="editImageForm"
-                            action="/recipes/{{.Recipe.ID}}/image"
-                            method="post"
-                            enctype="multipart/form-data"
-                    >
-                        <input type="hidden" name="_method" value="PUT">
-                        <label for="newImage" class="visually-hidden">Select Image to Upload</label>
-                        <input type="file" class="form-control" id="newImage" name="image" required>
-                    </form>
-                </div>
-                <div class="modal-footer d-flex">
-                    <button type="submit" class="btn btn-secondary flex-grow-1" form="editImageForm">
-                        Save Changes
-                    </button>
-
-                    {{if .Recipe.ImageURL}}
-                        <form
-                                id="deleteImageForm"
-                                action="/recipes/{{.Recipe.ID}}/image"
-                                method="post"
-                        >
-                            <input type="hidden" name="_method" value="DELETE">
-                            <button type="submit" class="btn btn-outline-danger" aria-label="Delete Image">
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                     viewBox="0 0 448 512"
-                                     fill="currentColor"
-                                     width="1em"
-                                     height="1em"
-                                >
-                                    <path d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"/>
-                                </svg>
-                            </button>
-                        </form>
-                    {{end}}
-                </div>
-            </div>
-        </div>
+    <div class="modal fade" id="editImageModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog"></div>
     </div>
 {{end}}
-{{define "scripts"}}
-    {{if .ShowImageModal}}
+{{block "scripts" .}}
     <script>
-        const modalElement = document.querySelector("#editImageModal");
-        const modal = new bootstrap.Modal(modalElement);
-
-        let isFirstTime = true;
-        modalElement.addEventListener("shown.bs.modal", () => {
-            // Add fade only after initial display to maintain UX
-            if (isFirstTime) {
-                modalElement.classList.add("fade");
-                isFirstTime = false;
-            }
+        const modal = document.querySelector("#editImageModal");
+        modal.addEventListener("show.bs.modal", async (event) => {
+            await fetchHTML(modal, "/recipes/{{.Recipe.ID}}/image");
         });
-
-        modal.show();
     </script>
-    {{end}}
 {{end}}
