--- a/views/layouts/partial.tmpl
+++ b/views/layouts/partial.tmpl
@@ -1,4 +1,5 @@
 {{define "partial"}}
     <div id="main">{{template "main" .}}</div>
     <div id="toast">{{template "toast" .}}</div>
+    <div id="scripts">{{template "scripts" .}}</div>
 {{end}}
