--- a/views/partials/meal-recipes-selection.tmpl
+++ b/views/partials/meal-recipes-selection.tmpl
@@ -46,7 +46,8 @@
             </div>
         </div>
     </div>
-
+{{end}}
+{{define "scripts"}}
     <script>
         document.querySelector("#searchRecipes").addEventListener("submit", async (event) => {
             event.preventDefault();
