--- a/views/partials/recipe-image-upload.tmpl
+++ b/views/partials/recipe-image-upload.tmpl
@@ -40,7 +40,8 @@
             </div>
         </div>
     </div>
-
+{{end}}
+{{define "scripts"}}
     <script>
         document.querySelector("#editImageForm").addEventListener("submit", async (event) => {
             event.preventDefault();
