--- a/views/pages/meal-list.tmpl
+++ b/views/pages/meal-list.tmpl
@@ -108,7 +108,7 @@
     </div>
 {{end}}
 {{block "scripts" .}}
-    <script>
+    <script nonce="{{.Nonce}}">
         const modal = document.querySelector("#recipesModal");
         modal.addEventListener("show.bs.modal", async (event) => {
             const date = event.relatedTarget.getAttribute("data-bs-date");
