--- a/views/pages/meal-list.tmpl
+++ b/views/pages/meal-list.tmpl
@@ -65,9 +65,34 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li>
+                                        <button
+                                                class="dropdown-item"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#shoppingModal"
+                                                data-bs-id="{{.Recipe.ID}}"
+                                        >
+                                            <svg
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    viewBox="0 0 576 512"
+                                                    fill="currentColor"
+                                                    width="1em"
+                                                    height="1em"
+                                                    class="me-1"
+                                            >
+                                                <path
+                                                        d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20l44 0 0 44c0 11 9 20 20 20s20-9 20-20l0-44 44 0c11 0 20-9 20-20s-9-20-20-20l-44 0 0-44c0-11-9-20-20-20s-20 9-20 20l0 44-44 0c-11 0-20 9-20 20z"
+                                                />
+                                            </svg>
+                                            Add to shopping list
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li>
                                         <form method="POST" action="/meals/{{.ID}}?date={{.Date}}">
                                             <input type="hidden" name="_method" value="DELETE">
-                                            <button type="submit" class="dropdown-item text-danger">
+                                            <button type="submit" class="dropdown-item">
                                                 <svg
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         viewBox="0 0 448 512"
@@ -106,14 +131,27 @@
     <div class="modal fade" id="recipesModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog"></div>
     </div>
+
+    <div class="modal fade" id="shoppingModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog"></div>
+    </div>
 {{end}}
 {{block "scripts" .}}
     <script nonce="{{.Nonce}}">
-        const modal = document.querySelector("#recipesModal");
-        modal.addEventListener("show.bs.modal", async (event) => {
+        const recipesModal = document.querySelector("#recipesModal");
+        recipesModal.addEventListener("show.bs.modal", async (event) => {
             const date = event.relatedTarget.getAttribute("data-bs-date");
             const url = `/meals/recipes/selection?date=${date}`;
-            await fetchHTML(modal, url);
+
+            await fetchHTML(recipesModal, url);
+        });
+
+        const shoppingModal = document.querySelector("#shoppingModal");
+        shoppingModal.addEventListener("show.bs.modal", async (event) => {
+            const id = event.relatedTarget.getAttribute("data-bs-id");
+            const url = `/recipes/${id}/shopping?date={{.Date}}`;
+
+            await fetchHTML(shoppingModal, url);
         });
     </script>
 {{end}}
