--- a/views/partials/meal-recipes-selection.tmpl
+++ b/views/partials/meal-recipes-selection.tmpl
@@ -56,7 +56,7 @@
             const search = event.target.elements.search.value;
             const url = `/meals/recipes/selection?date=${date}&search=${search}`;
 
-            await fetchHTML(modal, url);
+            await fetchHTML(recipesModal, url);
         });
     </script>
 {{end}}
